fix project text overflow

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -46,45 +46,38 @@
 
 .text h2 {
   position: relative;
-  color: #fff;
+  color: #e6a06f;
   top: 50%;
   margin: 0;
   margin-top: -50px;
   padding: 10px;
-  font-size: 26px;
-  // line-height: 34px;
-  font-weight: 300;
+  line-height: normal;
+  font-weight: 500;
   text-align: center;
-  // opacity: 0;
   text-transform: uppercase;
   -webkit-transform: translateY(100px);
   transform: translateY(100px);
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
+  opacity: 1;
 
 }
 
 .text p {
   position: relative;
   color: #fff;
-  top: 50%;
   margin: 0;
-  font-size: 16px;
+  font-size: 2em;
   line-height: 24px;
   font-weight: 300;
   text-align: center;
-  // opacity: 0;
   -webkit-transform: translateY(100px);
   transform: translateY(100px);
   -webkit-transition: all 0.3s ease-out 0s;
   transition: all 0.3s ease-out 0s;
+  opacity: 1;
+  overflow-wrap: normal;
 }
-
-// .actual_text {
-//   background-color: inherit;
-//   color: inherit;
-//   font-size: 16px;
-// }
 
 .text:hover {
   opacity: .8;
